Text de dadesGUI per Categoria

--- a/src/cat/insvidreres/inmrec/projecte_espai/UI/dadesGUI.form
+++ b/src/cat/insvidreres/inmrec/projecte_espai/UI/dadesGUI.form
@@ -30,17 +30,37 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="116" max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="243" max="32767" attributes="0"/>
-              <Component id="jButton2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
-          </Group>
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace min="116" pref="273" max="32767" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="246" max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="117" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="dadesTxt4" min="-2" max="-2" attributes="0"/>
+                  <Component id="dadesTxt3" min="-2" max="-2" attributes="0"/>
+                  <Component id="dadesTxt2" min="-2" max="-2" attributes="0"/>
+                  <Component id="dadesTxt1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="110" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="113" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="dadesTxt6" min="-2" max="-2" attributes="0"/>
+                          <Component id="dadesTxt5" min="-2" max="-2" attributes="0"/>
+                          <Component id="dadesTxt7" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="dadesTxt8" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -49,12 +69,32 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="132" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="dadesTxt1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="dadesTxt5" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="dadesTxt2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="dadesTxt6" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="dadesTxt3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="dadesTxt7" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="dadesTxt4" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="dadesTxt8" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="369" max="32767" attributes="0"/>
+              <EmptySpace pref="269" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -83,6 +123,22 @@
         </Property>
         <Property name="text" type="java.lang.String" value="jButton2"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="dadesTxt1">
+    </Component>
+    <Component class="javax.swing.JLabel" name="dadesTxt2">
+    </Component>
+    <Component class="javax.swing.JLabel" name="dadesTxt3">
+    </Component>
+    <Component class="javax.swing.JLabel" name="dadesTxt4">
+    </Component>
+    <Component class="javax.swing.JLabel" name="dadesTxt5">
+    </Component>
+    <Component class="javax.swing.JLabel" name="dadesTxt6">
+    </Component>
+    <Component class="javax.swing.JLabel" name="dadesTxt7">
+    </Component>
+    <Component class="javax.swing.JLabel" name="dadesTxt8">
     </Component>
   </SubComponents>
 </Form>
